--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<module>gulimall-ware</module>
 		<module>renren-fast</module>
 		<module>renren-generator</module>
-
+		<module>gulimall-third-party</module>
 		<module>gulimall-common</module>
 		<module>gulimall-gateway</module>
 	</modules>
