--- a/gulimall-third-party/pom.xml
+++ b/gulimall-third-party/pom.xml
@@ -48,7 +48,6 @@
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alicloud-oss</artifactId>
-			<version>2.1.0.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -93,12 +92,12 @@
 		</plugins>
 	</build>
 
-	<repositories>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-		</repository>
-	</repositories>
+<!--	<repositories>-->
+<!--		<repository>-->
+<!--			<id>spring-milestones</id>-->
+<!--			<name>Spring Milestones</name>-->
+<!--			<url>https://repo.spring.io/milestone</url>-->
+<!--		</repository>-->
+<!--	</repositories>-->
 
 </project>
