92、商品服务-API-新增商品-商品保存其他问题处理

--- a/gulimall-coupon/src/main/resources/bootstrap.properties
+++ b/gulimall-coupon/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 spring.application.name=gulimall-coupon
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=894b5b90-c6a4-41c9-8cc7-4f5f326a95aa
-spring.cloud.nacos.config.group=prod
+spring.cloud.nacos.config.group=dev
 spring.cloud.nacos.config.ext-config[0].dataId=datasource.yml
 spring.cloud.nacos.config.ext-config[0].group=dev
 spring.cloud.nacos.config.ext-config[0].refresh=true
