97、仓储服务-API-仓库管理-合并采购需求

--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
       secret-key: hWBSez9rSzPS3iN8HdiAMLry16UBdJ
       oss:
         endpoint: oss-cn-shanghai.aliyuncs.com
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
