--- a/gulimall-ware/src/main/resources/application.yml
+++ b/gulimall-ware/src/main/resources/application.yml
@@ -2,12 +2,21 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.56.9:3306/gulimall_wms
+    url: jdbc:mysql://192.168.56.10:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8
     driver-class-name: com.mysql.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: gulimall-ware
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
 server:
-  port: 11000
+  port: 20000
+logging:
+  level:
+    com.atguigu: debug
