--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -39,3 +39,9 @@ spring:
           filters:
           - RewritePath=/api/(?<segment>/?.*), /renren-fast/$\{segment}
 
+        - id: gulimall_host_route
+          uri: lb://gulimall-product
+          predicates:
+          - Host=**.gulimall.com,gulimall.com
+
+
