--- a/gulimall-product/pom.xml
+++ b/gulimall-product/pom.xml
@@ -57,7 +57,11 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-
+		</dependency>
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>3.12.0</version>
 		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>com.aliyun.oss</groupId>-->
