--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.application.name=gulimall-product
+
+spring.cache.type=redis
+spring.cache.redis.time-to-live=3600000
+#spring.cache.redis.key-prefix=CACHE_
+spring.cache.redis.use-key-prefix=true
+spring.cache.redis.cache-null-values=true
