--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -42,6 +42,11 @@ spring:
         - id: gulimall_host_route
           uri: lb://gulimall-product
           predicates:
-          - Host=**.gulimall.com,gulimall.com
+          - Host=gulimall.com
+
+        - id: gulimall_search_route
+          uri: lb://gulimall-search
+          predicates:
+          - Host=search.gulimall.com
 
 
