--- a/gulimall-auth-server/src/main/resources/application.properties
+++ b/gulimall-auth-server/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.application.name=gulimall-auth-server
 
 server.port=20000
+
+spring.thymeleaf.cache=false
