--- a/gulimall-auth-server/src/main/resources/application.properties
+++ b/gulimall-auth-server/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.application.name=gulimall-auth-server
 server.port=20000
 
 spring.thymeleaf.cache=false
+
+spring.redis.host=192.168.56.10
+spring.redis.port=6379
