--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.cache.redis.cache-null-values=true
 gulimall.thread.core-size=20
 gulimall.thread.max-size=200
 gulimall.thread.keep-alive-time=10
+
+spring.session.store-type=redis
