--- a/gulimall-search/src/main/resources/application.properties
+++ b/gulimall-search/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.application.name=gulimall-search
 server.port=40000
 
 spring.thymeleaf.cache=false
+
+
+spring.redis.host=192.168.56.10
+spring.session.store-type=redis
+
