--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -54,4 +54,9 @@ spring:
           predicates:
           - Host=auth.gulimall.com
 
+        - id: gulimall_cart_route
+          uri: lb://gulimall-cart
+          predicates:
+          - Host=cart.gulimall.com
+
 
