--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.rabbitmq.host=192.168.56.10
 spring.rabbitmq.port=5672
 spring.rabbitmq.virtual-host=/
+
+#\u5F00\u542F\u53D1\u9001\u7AEF\u786E\u8BA4
+#spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-confirms=true
+#\u6D88\u606F\u53D1\u9001\u7AEF\u62B5\u8FBE\u961F\u5217\u786E\u8BA4
+spring.rabbitmq.publisher-returns=true
+#\u53EA\u8981\u62B5\u8FBE\u961F\u5217\uFF0C\u4EE5\u5F02\u6B65\u53D1\u9001\u4F18\u5148\u56DE\u8C03returnconfirm
+spring.rabbitmq.template.mandatory=true
