--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -59,4 +59,9 @@ spring:
           predicates:
           - Host=cart.gulimall.com
 
+        - id: gulimall_order_route
+          uri: lb://gulimall-order
+          predicates:
+          - Host=order.gulimall.com
+
 
