--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.rabbitmq.publisher-confirms=true
 spring.rabbitmq.publisher-returns=true
 #\u53EA\u8981\u62B5\u8FBE\u961F\u5217\uFF0C\u4EE5\u5F02\u6B65\u53D1\u9001\u4F18\u5148\u56DE\u8C03returnconfirm
 spring.rabbitmq.template.mandatory=true
+#\u624B\u52A8ack\u6D88\u606F
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
+spring.thymeleaf.cache=false
+
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.application.name=gulimall-order
