--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.thymeleaf.cache=false
 
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.application.name=gulimall-order
+
+spring.session.store-type=redis
+
+gulimall.thread.core-size=20
+gulimall.thread.max-size=200
+gulimall.thread.keep-alive-time=10
+
+spring.redis.host=192.168.56.10
