305、商城业务-订单服务-支付成功同步回调

--- a/gulimall-order/pom.xml
+++ b/gulimall-order/pom.xml
@@ -60,10 +60,16 @@
 			<artifactId>jedis</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.alipay.sdk/alipay-sdk-java -->
+<!--		<dependency>-->
+<!--			<groupId>com.alipay.sdk</groupId>-->
+<!--			<artifactId>alipay-sdk-java</artifactId>-->
+<!--			<version>4.9.28.ALL</version>-->
+<!--		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/com.alipay.sdk/alipay-sdk-java -->
 		<dependency>
 			<groupId>com.alipay.sdk</groupId>
 			<artifactId>alipay-sdk-java</artifactId>
-			<version>4.9.28.ALL</version>
+			<version>4.10.0.ALL</version>
 		</dependency>
 
 		<dependency>
