--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -64,4 +64,9 @@ spring:
           predicates:
           - Host=order.gulimall.com
 
+        - id: gulimall_member_route
+          uri: lb://gulimall-member
+          predicates:
+          - Host=member.gulimall.com
+
 
