308、商城业务-订单服务-支付完成(有bug)

--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -24,3 +24,5 @@ gulimall.thread.max-size=200
 gulimall.thread.keep-alive-time=10
 
 spring.redis.host=192.168.56.10
+
+spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
