--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -11,6 +11,13 @@ spring:
           filters:
           - RewritePath=/api/(?<segment>/?.*), /$\{segment}
 
+        - id: coupon_route
+          uri: lb://gulimall-coupon
+          predicates:
+          - Path=/api/coupon/**
+          filters:
+          - RewritePath=/api/(?<segment>/?.*), /$\{segment}
+
         - id: third_party_route
           uri: lb://gulimall-third-party
           predicates:
