@Slf4j @Component @EnableScheduling @EnableAsync public class HelloSchedule {     @Async     @Scheduled(cron = "*/5 * * ? * 4")     public void hello(){         log.info("hello....");     } 312、商城业务-秒杀服务-SpringBoot整合定时任务与异步任务

--- a/gulimall-seckill/src/main/resources/application.properties
+++ b/gulimall-seckill/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=25000
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.redis.host=192.168.56.10
 
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=50
+
