--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -76,4 +76,9 @@ spring:
           predicates:
           - Host=member.gulimall.com
 
+        - id: gulimall_seckill_route
+          uri: lb://gulimall-seckill
+          predicates:
+          - Host=seckill.gulimall.com
+
 
