--- a/gulimall-seckill/src/main/resources/application.properties
+++ b/gulimall-seckill/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.redis.host=192.168.56.10
 spring.task.execution.pool.core-size=5
 spring.task.execution.pool.max-size=50
 
+spring.session.store-type=redis
+
