--- a/gulimall-seckill/src/main/resources/application.properties
+++ b/gulimall-seckill/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.task.execution.pool.max-size=50
 
 spring.session.store-type=redis
 
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.host=192.168.56.10
+
