--- a/gulimall-seckill/src/main/resources/application.properties
+++ b/gulimall-seckill/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.session.store-type=redis
 
 spring.rabbitmq.virtual-host=/
 spring.rabbitmq.host=192.168.56.10
+spring.thymeleaf.cache=false
 
