--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -85,7 +85,10 @@
             <artifactId>jetty-util</artifactId>
             <version>9.3.7.v20160115</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
