--- a/gulimall-seckill/src/main/resources/application.properties
+++ b/gulimall-seckill/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.rabbitmq.virtual-host=/
 spring.rabbitmq.host=192.168.56.10
 spring.thymeleaf.cache=false
 
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+spring.cloud.sentinel.transport.port=8719
+
