--- a/gulimall-seckill/src/main/resources/application.properties
+++ b/gulimall-seckill/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.thymeleaf.cache=false
 spring.cloud.sentinel.transport.dashboard=localhost:8333
 spring.cloud.sentinel.transport.port=8719
 
+management.endpoints.web.exposure.include=*
+
