329、Sentinel-全服务引入

--- a/gulimall-auth-server/src/main/resources/application.properties
+++ b/gulimall-auth-server/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.redis.port=6379
 spring.session.store-type=redis
 
 server.servlet.session.timeout=30m
+
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
