--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -26,3 +26,6 @@ gulimall.thread.keep-alive-time=10
 spring.redis.host=192.168.56.10
 
 spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
+
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
