--- a/gulimall-cart/src/main/resources/application.properties
+++ b/gulimall-cart/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.redis.host=192.168.56.10
 gulimall.thread.core-size=20
 gulimall.thread.max-size=200
 gulimall.thread.keep-alive-time=10
+
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
