--- a/gulimall-coupon/src/main/resources/application.properties
+++ b/gulimall-coupon/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 coupon.user.name=zhangsan
 coupon.user.age=18
+
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
