--- a/gulimall-gateway/src/main/resources/application.properties
+++ b/gulimall-gateway/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.application.name=gulimall-gateway
 server.port=88
+
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
