--- a/gulimall-member/src/main/resources/application.properties
+++ b/gulimall-member/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.thymeleaf.cache=false
 spring.session.store-type=redis
 
 spring.redis.host=192.168.56.10
+
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
