--- a/gulimall-order/pom.xml
+++ b/gulimall-order/pom.xml
@@ -59,6 +59,11 @@
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.alipay.sdk/alipay-sdk-java -->
 <!--		<dependency>-->
 <!--			<groupId>com.alipay.sdk</groupId>-->
