--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -13,3 +13,6 @@ gulimall.thread.max-size=200
 gulimall.thread.keep-alive-time=10
 
 spring.session.store-type=redis
+
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
