--- a/gulimall-search/src/main/resources/application.properties
+++ b/gulimall-search/src/main/resources/application.properties
@@ -10,5 +10,6 @@ spring.thymeleaf.cache=false
 spring.redis.host=192.168.56.10
 spring.session.store-type=redis
 
-
+spring.cloud.sentinel.transport.dashboard=localhost:8333
+management.endpoints.web.exposure.include=*
 
