--- a/gulimall-gateway/src/main/resources/application.properties
+++ b/gulimall-gateway/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=88
 
 spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
+
+
+spring.cloud.sentinel.scg.fallback.response-status=400
