335、Sleuth-链路追踪-基本概念&整合

--- a/gulimall-seckill/src/main/resources/application.properties
+++ b/gulimall-seckill/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.cloud.sentinel.transport.port=8719
 spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
 
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
+
