--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
 
 feign.sentinel.enabled=true
+
+logging.level.org.springframework.cloud.openfeign=debug
+logging.level.org.springframework.cloud.sleuth=debug
