--- a/gulimall-gateway/src/main/resources/application.properties
+++ b/gulimall-gateway/src/main/resources/application.properties
@@ -7,3 +7,8 @@ management.endpoints.web.exposure.include=*
 
 
 spring.cloud.sentinel.scg.fallback.response-status=400
+
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
