--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -29,3 +29,8 @@ spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 
 spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
+
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
