--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -21,3 +21,8 @@ feign.sentinel.enabled=true
 
 logging.level.org.springframework.cloud.openfeign=debug
 logging.level.org.springframework.cloud.sleuth=debug
+
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
