--- a/gulimall-search/src/main/resources/application.properties
+++ b/gulimall-search/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.session.store-type=redis
 spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
 
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
+
