--- a/gulimall-seckill/src/main/resources/application.properties
+++ b/gulimall-seckill/src/main/resources/application.properties
@@ -20,3 +20,7 @@ management.endpoints.web.exposure.include=*
 logging.level.org.springframework.cloud.openfeign=debug
 logging.level.org.springframework.cloud.sleuth=debug
 
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
