--- a/gulimall-third-party/src/main/resources/application.properties
+++ b/gulimall-third-party/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
+
+spring.zipkin.base-url=http://192.168.56.10:9411
+spring.zipkin.discovery-client-enabled=false
+spring.zipkin.sender.type=web
+spring.sleuth.sampler.probability=1
