--- a/gulimall-coupon/src/main/resources/application-prod.properties
+++ b/gulimall-coupon/src/main/resources/application-prod.properties
@@ -1,21 +1,23 @@
 coupon.user.name=zhangsan
 coupon.user.age=18
 
-spring.cloud.sentinel.transport.dashboard=localhost:8333
 management.endpoints.web.exposure.include=*
 
-spring.zipkin.base-url=http://192.168.56.10:9411
 spring.zipkin.discovery-client-enabled=false
 spring.zipkin.sender.type=web
 spring.sleuth.sampler.probability=1
 
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://192.168.56.9:3306/gulimall_sms
+spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://mysql-master.gulimall:3306/gulimall_sms
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.application.name=gulimall-coupon
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
 server.port=7000
+
+spring.cloud.nacos.discovery.server-addr=nacos-service.gulimall:8848
+spring.redis.host=redis.gulimall
+spring.cloud.sentinel.transport.dashboard=sentinel-service.gulimall:8333
+spring.zipkin.base-url=http://zipkin-service.gulimall:9411
