380、部署-创建微服务Dockerfile

--- a/gulimall-order/src/main/resources/application-prod.properties
+++ b/gulimall-order/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.rabbitmq.host=192.168.56.10
+spring.rabbitmq.host=rabbitmq-management.gulimall
 spring.rabbitmq.port=5672
 spring.rabbitmq.virtual-host=/
 
