--- a/gulimall-seckill/src/main/resources/application-prod.properties
+++ b/gulimall-seckill/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 spring.application.name=gulimall-seckill
-server.port=25000
+server.port=8080
 
 spring.task.execution.pool.core-size=5
 spring.task.execution.pool.max-size=50
@@ -7,7 +7,7 @@ spring.task.execution.pool.max-size=50
 spring.session.store-type=redis
 
 spring.rabbitmq.virtual-host=/
-spring.rabbitmq.host=192.168.56.10
+spring.rabbitmq.host=rabbitmq-management.gulimall
 spring.thymeleaf.cache=false
 
 spring.cloud.sentinel.transport.port=8719
