--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 		<module>gulimall-third-party</module>
 		<module>gulimall-common</module>
 		<module>gulimall-gateway</module>
+		<module>gulimall-auth-server</module>
+		<module>gulimall-cart</module>
+		<module>gulimall-search</module>
+		<module>gulimall-seckill</module>
+
 	</modules>
 
 </project>
