--- a/renren-fast/src/main/resources/application-prod.yml
+++ b/renren-fast/src/main/resources/application-prod.yml
@@ -1,3 +1,14 @@
+# Tomcat
+server:
+    tomcat:
+        uri-encoding: UTF-8
+        max-threads: 1000
+        min-spare-threads: 30
+    port: 8080
+    connection-timeout: 5000ms
+    servlet:
+        context-path: /renren-fast
+
 spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
