--- a/gulimall-product/src/main/resources/bootstrap.properties
+++ b/gulimall-product/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-#spring.application.name=gulimall-product
-#
-#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-#spring.cloud.nacos.config.namespace=727d285c-676e-4901-9bf3-6cb9d79a5d2a
+spring.application.name=gulimall-product
+
+spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+spring.cloud.nacos.config.namespace=727d285c-676e-4901-9bf3-6cb9d79a5d2a
